--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+/* @import url(https://fonts.googleapis.com/css?family=Roboto:300); */
 
 header .header {
     background-color: #fff;
@@ -44,6 +44,14 @@ header a img {
     font-size: 14px;
 }
 
+#user {
+    width: 100%;
+    height: 45px;
+    margin-bottom: 10px;
+    background-color: #f2f2f2;
+    color: #b3b3b3;
+}
+
 .form button {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
@@ -82,7 +90,8 @@ body {
     background-image: url("assets/login/background.jpg");
     background-size: cover;
     background-color: #328f8a;
-    font-family: "Roboto", sans-serif;
+    /* font-family: "Roboto", sans-serif; */
+    font-family: "Poppins", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
