User field information page

--- a/case_register.css
+++ b/case_register.css
@@ -29,6 +29,7 @@ body {
 #high-court,
 #district-court {
     width: 5%;
+    display: inline;
     display: inline-flex;
     margin-left: 0px;
 }
@@ -50,7 +51,7 @@ textarea {
     width: 95%;
     margin-bottom: 10px;
     background-color: #f2f2f2;
-    color: #b3b3b3;
+    color: black;
 }
 
 
